--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:YFen_Browser_CSharp"
         xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
         mc:Ignorable="d"
-        Title="YFen Browser" Height="450" Width="800" Icon="/appicon.ico">
+        Title="YFen Browser" Height="450" Width="800" Icon="/appicon.ico" WindowStartupLocation="CenterScreen" WindowState="Normal" WindowStyle="ThreeDBorderWindow" ScrollViewer.HorizontalScrollBarVisibility="Visible">
 
     <Window.Resources>
 
