--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -35,19 +35,29 @@
             <ColumnDefinition Width="614*"/>
             <ColumnDefinition Width="93*"/>
         </Grid.ColumnDefinitions>
-        <wv2:WebView2 Name="webView" Source="http://duckduckgo.com" Margin="10,43,10,10" Grid.ColumnSpan="3" NavigationCompleted="webView_NavigationCompleted"/>
-        <Button x:Name="BackButton" Style="{StaticResource ButtonStyle}" Margin="10,8,1,0" BorderBrush="#00707070" Cursor="Hand" Click="BackButton_Click" Height="30" VerticalAlignment="Top" Visibility="Collapsed">
+        <ProgressBar x:Name="DownloadProgressBar" Height="33" Margin="10,206,10,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Grid.ColumnSpan="3" Visibility="Collapsed">
+            <ProgressBar.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleY="-1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </ProgressBar.RenderTransform>
+        </ProgressBar>
+        <wv2:WebView2 x:Name="webView" Source="http://duckduckgo.com" Margin="0,43,0,0" Grid.ColumnSpan="3" NavigationCompleted="webView_NavigationCompleted"/>
+        <Button x:Name="BackButton" Style="{StaticResource ButtonStyle}" Margin="0,8,10,0" BorderBrush="#00707070" Cursor="Hand" Click="BackButton_Click" Height="30" VerticalAlignment="Top" Visibility="Collapsed" HorizontalAlignment="Right" Width="31">
             <Button.Background>
                 <ImageBrush ImageSource="/premium-icon-left-arrow-4941878.png" Stretch="Uniform"/>
             </Button.Background>
         </Button>
-        <TextBox x:Name="SearchLine" Margin="6,8,5,0" Cursor="IBeam" Background="#FFEFEFEF" Grid.Column="1" Height="30" VerticalAlignment="Top" SelectionBrush="#FFABADB3"/>
-        <Button x:Name="HomeButton" Style="{StaticResource ButtonStyle}" Margin="12,8,50,0" Cursor="Hand" Height="30" VerticalAlignment="Top" Grid.Column="2" Click="HomeButton_Click">
+        <TextBox x:Name="SearchLine" Margin="6,8,5,0" Cursor="IBeam" Background="#FFEFEFEF" Grid.Column="1" Height="30" VerticalAlignment="Top" SelectionBrush="#FFABADB3" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+        <Button x:Name="HomeButton" Style="{StaticResource ButtonStyle}" Margin="10,8,0,0" Cursor="Hand" Grid.Column="2" Click="HomeButton_Click" HorizontalAlignment="Left" Width="31" Height="30" VerticalAlignment="Top">
             <Button.Background>
                 <ImageBrush ImageSource="/free-icon-home-6659713.png" Stretch="Uniform"/>
             </Button.Background>
         </Button>
-        <Button x:Name="SearchButton" Style="{StaticResource ButtonStyle}" Margin="53,8,10,0" Height="30" VerticalAlignment="Top" Grid.Column="2" Click="SearchButton_Click" Cursor="Hand">
+        <Button x:Name="SearchButton" Style="{StaticResource ButtonStyle}" Margin="47,8,0,0" Height="30" VerticalAlignment="Top" Grid.Column="2" Click="SearchButton_Click" Cursor="Hand" HorizontalAlignment="Left" Width="30">
             <Button.Background>
                 <ImageBrush Stretch="Uniform" ImageSource="/premium-icon-right-arrow-4941935.png"/>
             </Button.Background>
